--- a/5- Case Study Sentiment Analysis.ipynb
+++ b/5- Case Study Sentiment Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Case Study: Sentiment Analysis"
+    "# Sentiment Analysis"
    ]
   },
   {
